Fixed layout issue on mobile: adjusted font size in Preample class to prevent excessive growth on hover
When hovering over text in the Preample class on mobile devices, the font size would previously grow larger than its parent box, causing layout issues. To address this, I added media queries to reduce the font size when hovering, ensuring that the text remains proportional to its parent container. This fix improves the overall layout and usability on mobile devices.

--- a/css/style.css
+++ b/css/style.css
@@ -180,14 +180,23 @@ main {
     .menu-container {
         border: none;
     }
+
+    .preamble:hover {
+        font-size: 0.7em;
+    }
 }
 
 @media (min-width: 1350px) {
-    .menu-container li a{
+    .menu-container li a {
         padding: 25px;
     }
 }
 
+@media (min-width: 1300px) {
+    .preamble:hover .second-preamble-container {
+        font-size: large;
+    }
+}
 
 /* 
     style for main ends here  
